95% functionality completed. Started layout. TODO - Save High Scores. Restart Game Button

--- a/index.html
+++ b/index.html
@@ -4,14 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Quizzer.</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
     <div class="container">
-        <div id="question-box">
-            <h1 id="title"></h1>
-            <ol id="question-list"></ol>
-            <p id="info-text">Score: <span id="score-text">0</span></p>
+        <h1 id="title"></h1>
+        <div id="question-box" class="col-12"></div>
+        <div>
+            <ol id="question-list" class="btn-group-vertical">
+            </ol>
+            <p id="info-text">
+                <span class="score-group">
+                    Score: 
+                    <span id="score-text">
+                        0
+                    </span>
+                    Time Left: 
+                    <span id="time-text">
+                        0
+                    </span>
+                </span>
+            </p>
+            
         </div>
     </div>
 </body>
