Restructured app.js, added clear scores button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container text-center">
         <h1 id="title"></h1>
         <div class="">
-            <h3 id="question-box" class="col-12"></h3>
+            <h3 id="question-box" class="col-12"> Welcome to the Quizzer, if you can see this then something went wrong!</h3>
             <div class="container p-2">
                 <div id="question-list" class="justify-content-center">
                 </div>
