--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <h3 id="question-box" class="col-12"> Welcome to the Quizzer, if you can see this then something went wrong!</h3>
             <div class="container p-2">
                 <div id="question-list" class="justify-content-center">
+                    <input type="text" id="name-input">
                 </div>
                 <p id="info-text" class="">
                     <span class="score-group">
